<resources>
    <string name="app_name">DeanPinlac_SanjibSaha_COMP304Sec002_Lab5_Ex1</string>
    <string name="labelCuisine">Cuisines</string>
    <string name="placeholderCuisine">Cuisine Placeholder</string>
    <string name="googleApiKey">AIzaSyA7NWyy2RQK5WXxYxcaQ88xIBJWsC85Rfc</string>
    <string name="opening_placeholder">Opening Placeholder</string>
    <string name="contact_placeholder">Contact Placeholder</string>
    <string name="rating_placeholder">Rating Placeholder</string>
    <string name="address_placeholder">Address Placeholder</string>
    <string name="name_placeholder">Name Placeholder</string>

    <string-array name="cuisineList">
        <item>Italian</item>
        <item>Greek</item>
        <item>Chinese</item>
        <item>Korean</item>
        <item>Indian</item>
        <item>Thai</item>
        <item>Japanese</item>
        <item>Filipino</item>
        <item>Vegan</item>
    </string-array>

</resources>