<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="424dp" />

    <androidx.cardview.widget.CardView
        style="@style/Card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing10"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/Label2"
                android:id="@+id/restaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_placeholder"
                android:padding="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                style="@style/Label3"
                android:id="@+id/restaurantAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_placeholder"
                android:layout_marginStart="@dimen/spacing10"
                app:layout_constraintTop_toBottomOf="@id/restaurantName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                style="@style/Label3"
                android:id="@+id/restaurantOpening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opening_placeholder"
                android:layout_marginStart="@dimen/spacing10"
                app:layout_constraintTop_toBottomOf="@id/restaurantAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                style="@style/Label3"
                android:id="@+id/restaurantContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_placeholder"
                android:layout_marginStart="@dimen/spacing10"
                app:layout_constraintTop_toBottomOf="@id/restaurantOpening"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                style="@style/Label3"
                android:id="@+id/restaurantRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating_placeholder"
                android:layout_marginStart="@dimen/spacing10"
                app:layout_constraintTop_toBottomOf="@id/restaurantContact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>